--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030141505">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +57,7 @@
 										</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастический
+										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастические
 											комплексы</a>
 									</li>
 									<li class="menu__sub-item">
@@ -191,17 +191,17 @@
 					<div class="catalog__wrapper swiper-wrapper ">
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/playgrounds/1.jpg" alt=""></div>
+							<div class="slide__image"><img src="img/качалки/image 6.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
-										"В стране сказок"
+										"Качалки"
 									</div>
 									<div class="slide__description">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio esse culpa possimus enim,
-										facilis iste animi nobis fugiat modi expedita voluptate. Consequatur commodi a ipsa illo
-										blanditiis, sequi quidem nobis?
+
 									</div>
+									<a class="slide__button" href="./rocking-courusels.html"> <span>Показать еще</span></a>
+
 								</div>
 
 
@@ -210,17 +210,17 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/playgrounds/2.jpg" alt=""></div>
+							<div class="slide__image"><img src="img/карусели/image 34.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
-										"Мир фантазий"
+										"Карусели"
 									</div>
 									<div class="slide__description">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio esse culpa possimus enim,
-										facilis iste animi nobis fugiat modi expedita voluptate. Consequatur commodi a ipsa illo
-										blanditiis, sequi quidem nobis?
+
 									</div>
+									<a class="slide__button" href="./carousels.html"> <span>Показать еще</span></a>
+
 								</div>
 
 
@@ -229,17 +229,17 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/playgrounds/3.jpg" alt=""></div>
+							<div class="slide__image"><img src="img/качели/image 39.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
-										"Солнечный город"
+										"Качели"
 									</div>
 									<div class="slide__description">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio esse culpa possimus enim,
-										facilis iste animi nobis fugiat modi expedita voluptate. Consequatur commodi a ipsa illo
-										blanditiis, sequi quidem nobis?
+
 									</div>
+									<a class="slide__button" href="./swing.html"> <span>Показать еще</span></a>
+
 								</div>
 
 
@@ -248,17 +248,17 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/playgrounds/4.jpg" alt=""></div>
+							<div class="slide__image"><img src="img/горки/image 52.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
-										"Солнечная полянка"
+										"Горки"
 									</div>
 									<div class="slide__description">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio esse culpa possimus enim,
-										facilis iste animi nobis fugiat modi expedita voluptate. Consequatur commodi a ipsa illo
-										blanditiis, sequi quidem nobis?
+
 									</div>
+									<a class="slide__button" href="./slides.html"> <span>Показать еще</span></a>
+
 								</div>
 
 
@@ -267,17 +267,153 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/playgrounds/5.jpg" alt=""></div>
+							<div class="slide__image"><img src="img/песочницы/image 67.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
-										"Галактика"
+										"Песочницы"
 									</div>
 									<div class="slide__description">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio esse culpa possimus enim,
-										facilis iste animi nobis fugiat modi expedita voluptate. Consequatur commodi a ipsa illo
-										blanditiis, sequi quidem nobis?
+
 									</div>
+									<a class="slide__button" href="./sandbox.html"> <span>Показать еще</span></a>
+
+								</div>
+
+
+
+							</div>
+						</div>
+						<div class="catalog__slide swiper-slide">
+
+							<div class="slide__image"><img src="img/домики__и__ограждения/image 80.png" alt=""></div>
+							<div class="slide__content">
+								<div class="slide__text">
+									<div class="slide__title">
+										"Ограждения/Домики-беседки"
+									</div>
+									<div class="slide__description">
+
+									</div>
+									<a class="slide__button" href="./houses.html"> <span>Показать еще</span></a>
+
+								</div>
+
+
+
+							</div>
+						</div>
+						<div class="catalog__slide swiper-slide">
+
+							<div class="slide__image"><img src="img/машинки/image 109.png" alt=""></div>
+							<div class="slide__content">
+								<div class="slide__text">
+									<div class="slide__title">
+										"Машинки,
+										Паровозики"
+									</div>
+									<div class="slide__description">
+
+									</div>
+									<a class="slide__button" href="./cars.html"> <span>Показать еще</span></a>
+
+								</div>
+
+
+
+							</div>
+						</div>
+						<div class="catalog__slide swiper-slide">
+
+							<div class="slide__image"><img src="img/игровые__площадки/image 145.png" alt=""></div>
+							<div class="slide__content">
+								<div class="slide__text">
+									<div class="slide__title">
+										"Детские игровые
+										Комплексы"
+									</div>
+									<div class="slide__description">
+
+									</div>
+									<a class="slide__button" href="./gaming-complexes.html"> <span>Показать еще</span></a>
+
+								</div>
+
+
+
+							</div>
+						</div>
+						<div class="catalog__slide swiper-slide">
+
+							<div class="slide__image"><img src="img/гимнастика/image 177.png" alt=""></div>
+							<div class="slide__content">
+								<div class="slide__text">
+									<div class="slide__title">
+										"Детские гимнастические
+										комплексы"
+									</div>
+									<div class="slide__description">
+
+									</div>
+									<a class="slide__button" href="./gymnastics-complexes.html"> <span>Показать еще</span></a>
+
+								</div>
+
+
+
+							</div>
+						</div>
+						<div class="catalog__slide swiper-slide">
+
+							<div class="slide__image"><img src="img/спорт/image 190.png" alt=""></div>
+							<div class="slide__content">
+								<div class="slide__text">
+									<div class="slide__title">
+										"Спортивное оборудования"
+									</div>
+									<div class="slide__description">
+
+									</div>
+									<a class="slide__button" href="./sport-equip.html"> <span>Показать еще</span></a>
+
+								</div>
+
+
+
+							</div>
+						</div>
+						<div class="catalog__slide swiper-slide">
+
+							<div class="slide__image"><img src="img/лавочки/image 225.png" alt=""></div>
+							<div class="slide__content">
+								<div class="slide__text">
+									<div class="slide__title">
+										"Скамейки"
+									</div>
+									<div class="slide__description">
+
+									</div>
+									<a class="slide__button" href="./benches.html"> <span>Показать еще</span></a>
+
+								</div>
+
+
+
+							</div>
+						</div>
+						<div class="catalog__slide swiper-slide">
+
+							<div class="slide__image"><img src="img/другое/image 262.png" alt=""></div>
+							<div class="slide__content">
+								<div class="slide__text">
+									<div class="slide__title">
+										"Другое"
+									</div>
+									<div class="slide__description">
+
+									</div>
+									<a class="slide__button" href="./other.html"> <span>Показать еще</span></a>
+
 								</div>
 
 
@@ -288,7 +424,7 @@
 
 					</div>
 				</div>
-				<div class="__container"><a class="slide__button" href=""> <span>Показать еще</span></a> </div>
+
 			</section>
 			<section class="page__projects projects">
 				<div class="projects ">
@@ -447,7 +583,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030141505"></script>
+	<script src="js/app.min.js?_v=20221030162509"></script>
 </body>
 
 </html>
