--- a/other.html
+++ b/other.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030141505">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +57,7 @@
 										</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастический
+										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастические
 											комплексы</a>
 									</li>
 									<li class="menu__sub-item">
@@ -94,18 +94,8 @@
 		</header>
 		<!--Header-->
 		<main class="page catalog">
-			<div class="chat">
-				<div class="content__type">
-					<a href="tel:+7(908)1231213" class="content__catalog content-point"><img class="phone" src="img/icons/Phone.svg"
-							alt=""></a>
-					<a href="https://wa.me/79613091930" class="content__list content-point"><img src="img/icons/whatsapp_logo.svg"
-							alt=""></a>
-				</div>
-				<div data-add class="chat__icon">
-					<img data-add class="open" src="img/icons/Chat.svg" alt="">
-					<img data-add class="close" src="img/icons/Close_LG.svg" alt="">
-			
-				</div>
+			<div class="popup__btn">
+				<img src="img/icons/Chat.svg" alt="">
 			</div>
 
 			<section class="page__products products">
@@ -144,13 +134,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -173,13 +157,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -203,13 +181,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -234,13 +206,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -263,13 +229,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -294,13 +254,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -325,13 +279,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -358,13 +306,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -391,13 +333,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -423,13 +359,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -453,13 +383,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -486,13 +410,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -516,13 +434,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -548,13 +460,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -580,13 +486,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -611,13 +511,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -640,13 +534,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -670,13 +558,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -699,13 +581,7 @@
 									<div class="item-product__price">договорная</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -728,13 +604,7 @@
 									<div class="item-product__price">9 700</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -752,13 +622,7 @@
 									<div class="item-product__price">5 850</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -777,13 +641,7 @@
 									<div class="item-product__price">9 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -802,13 +660,7 @@
 									<div class="item-product__price">12 800</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -826,13 +678,7 @@
 									<div class="item-product__price">6 800</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -851,13 +697,7 @@
 									<div class="item-product__price">12 700</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -876,13 +716,7 @@
 									<div class="item-product__price">5 800</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -901,13 +735,7 @@
 									<div class="item-product__price">5 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -926,13 +754,7 @@
 									<div class="item-product__price">5 300</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 
@@ -972,7 +794,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030141505"></script>
+	<script src="js/app.min.js?_v=20221030162509"></script>
 </body>
 
 </html>
