--- a/sandbox.html
+++ b/sandbox.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030141505">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +57,7 @@
 										</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастический
+										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастические
 											комплексы</a>
 									</li>
 									<li class="menu__sub-item">
@@ -94,18 +94,8 @@
 		</header>
 		<!--Header-->
 		<main class="page catalog">
-			<div class="chat">
-				<div class="content__type">
-					<a href="tel:+7(908)1231213" class="content__catalog content-point"><img class="phone" src="img/icons/Phone.svg"
-							alt=""></a>
-					<a href="https://wa.me/79613091930" class="content__list content-point"><img src="img/icons/whatsapp_logo.svg"
-							alt=""></a>
-				</div>
-				<div data-add class="chat__icon">
-					<img data-add class="open" src="img/icons/Chat.svg" alt="">
-					<img data-add class="close" src="img/icons/Close_LG.svg" alt="">
-			
-				</div>
+			<div class="popup__btn">
+				<img src="img/icons/Chat.svg" alt="">
 			</div>
 
 			<section class="page__products products">
@@ -142,13 +132,7 @@
 									<div class="item-product__price">26 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -169,13 +153,7 @@
 									<div class="item-product__price">25 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -197,13 +175,7 @@
 									<div class="item-product__price">29 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -226,13 +198,7 @@
 									<div class="item-product__price">18 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -254,13 +220,7 @@
 									<div class="item-product__price">18 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -283,13 +243,7 @@
 									<div class="item-product__price">39 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -311,13 +265,7 @@
 									<div class="item-product__price">39 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -341,13 +289,7 @@
 									<div class="item-product__price">37 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -371,13 +313,7 @@
 									<div class="item-product__price">42 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -400,13 +336,7 @@
 									<div class="item-product__price">49 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -428,13 +358,7 @@
 									<div class="item-product__price">76 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -456,13 +380,7 @@
 									<div class="item-product__price">79 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -484,13 +402,7 @@
 									<div class="item-product__price">132 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -513,13 +425,7 @@
 									<div class="item-product__price">41 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -539,13 +445,7 @@
 									<div class="item-product__price">160000</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -567,13 +467,7 @@
 									<div class="item-product__price">31 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -593,13 +487,7 @@
 									<div class="item-product__price">29 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -622,13 +510,7 @@
 									<div class="item-product__price">38 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -651,13 +533,7 @@
 									<div class="item-product__price">29 100</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -678,13 +554,7 @@
 									<div class="item-product__price">170500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 
@@ -724,7 +594,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030141505"></script>
+	<script src="js/app.min.js?_v=20221030162509"></script>
 </body>
 
 </html>
