--- a/sport-equip.html
+++ b/sport-equip.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030141505">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +57,7 @@
 										</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастический
+										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастические
 											комплексы</a>
 									</li>
 									<li class="menu__sub-item">
@@ -94,18 +94,8 @@
 		</header>
 		<!--Header-->
 		<main class="page catalog">
-			<div class="chat">
-				<div class="content__type">
-					<a href="tel:+7(908)1231213" class="content__catalog content-point"><img class="phone" src="img/icons/Phone.svg"
-							alt=""></a>
-					<a href="https://wa.me/79613091930" class="content__list content-point"><img src="img/icons/whatsapp_logo.svg"
-							alt=""></a>
-				</div>
-				<div data-add class="chat__icon">
-					<img data-add class="open" src="img/icons/Chat.svg" alt="">
-					<img data-add class="close" src="img/icons/Close_LG.svg" alt="">
-			
-				</div>
+			<div class="popup__btn">
+				<img src="img/icons/Chat.svg" alt="">
 			</div>
 
 			<section class="page__products products">
@@ -142,13 +132,7 @@
 									<div class="item-product__price">22200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -169,13 +153,7 @@
 									<div class="item-product__price">25 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -194,13 +172,7 @@
 									<div class="item-product__price">15 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -221,13 +193,7 @@
 									<div class="item-product__price">28 100</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -248,13 +214,7 @@
 									<div class="item-product__price">17 800</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -273,13 +233,7 @@
 									<div class="item-product__price">28 800</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -300,13 +254,7 @@
 									<div class="item-product__price">56 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -327,13 +275,7 @@
 									<div class="item-product__price">27 990</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -354,13 +296,7 @@
 									<div class="item-product__price">24 990</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -381,13 +317,7 @@
 									<div class="item-product__price">32 400</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -407,13 +337,7 @@
 									<div class="item-product__price">39 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -434,13 +358,7 @@
 									<div class="item-product__price">26 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -461,13 +379,7 @@
 									<div class="item-product__price">21 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -488,13 +400,7 @@
 									<div class="item-product__price">27 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -515,13 +421,7 @@
 									<div class="item-product__price">27 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -542,13 +442,7 @@
 									<div class="item-product__price">23 990</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -569,13 +463,7 @@
 									<div class="item-product__price">23 550</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -596,13 +484,7 @@
 									<div class="item-product__price">28 800</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -623,13 +505,7 @@
 									<div class="item-product__price">24 100</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -650,13 +526,7 @@
 									<div class="item-product__price">25 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -677,13 +547,7 @@
 									<div class="item-product__price">20 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -705,13 +569,7 @@
 									<div class="item-product__price">27 300</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -733,13 +591,7 @@
 									<div class="item-product__price">29600</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -762,13 +614,7 @@
 									<div class="item-product__price">28 000</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -790,13 +636,7 @@
 									<div class="item-product__price">27900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -818,13 +658,7 @@
 									<div class="item-product__price">46900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -846,13 +680,7 @@
 									<div class="item-product__price">36000</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -874,13 +702,7 @@
 									<div class="item-product__price">29200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -903,13 +725,7 @@
 									<div class="item-product__price">31500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -931,13 +747,7 @@
 									<div class="item-product__price">44200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -959,13 +769,7 @@
 									<div class="item-product__price">27500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -987,13 +791,7 @@
 									<div class="item-product__price">25 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -1015,13 +813,7 @@
 									<div class="item-product__price">26900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -1043,13 +835,7 @@
 									<div class="item-product__price">23100</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 
@@ -1088,7 +874,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030141505"></script>
+	<script src="js/app.min.js?_v=20221030162509"></script>
 </body>
 
 </html>
