--- a/swing.html
+++ b/swing.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030141505">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +57,7 @@
 										</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастический
+										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастические
 											комплексы</a>
 									</li>
 									<li class="menu__sub-item">
@@ -94,18 +94,12 @@
 		</header>
 		<!--Header-->
 		<main class="page catalog">
-			<div class="chat">
+			<div class="add__newContent">
 				<div class="content__type">
-					<a href="tel:+7(908)1231213" class="content__catalog content-point"><img class="phone" src="img/icons/Phone.svg"
-							alt=""></a>
-					<a href="https://wa.me/79613091930" class="content__list content-point"><img src="img/icons/whatsapp_logo.svg"
-							alt=""></a>
+					<a href="#" class="content__catalog content-point">Новый каталог</a>
+					<a href="#" class="content__list content-point">Новая страница</a>
 				</div>
-				<div data-add class="chat__icon">
-					<img data-add class="open" src="img/icons/Chat.svg" alt="">
-					<img data-add class="close" src="img/icons/Close_LG.svg" alt="">
-			
-				</div>
+				<div data-add class="_icon-add__content"></div>
 			</div>
 
 			<section class="page__products products">
@@ -140,13 +134,7 @@
 									<div class="item-product__price">27 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -165,13 +153,7 @@
 									<div class="item-product__price">21 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -190,13 +172,7 @@
 									<div class="item-product__price">23 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -215,13 +191,7 @@
 									<div class="item-product__price">48 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 
@@ -260,7 +230,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030141505"></script>
+	<script src="js/app.min.js?_v=20221030162509"></script>
 </body>
 
 </html>
