--- a/gymnastics-complexes.html
+++ b/gymnastics-complexes.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030141505">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +57,7 @@
 										</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастический
+										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастические
 											комплексы</a>
 									</li>
 									<li class="menu__sub-item">
@@ -94,18 +94,8 @@
 		</header>
 		<!--Header-->
 		<main class="page catalog">
-			<div class="chat">
-				<div class="content__type">
-					<a href="tel:+7(908)1231213" class="content__catalog content-point"><img class="phone" src="img/icons/Phone.svg"
-							alt=""></a>
-					<a href="https://wa.me/79613091930" class="content__list content-point"><img src="img/icons/whatsapp_logo.svg"
-							alt=""></a>
-				</div>
-				<div data-add class="chat__icon">
-					<img data-add class="open" src="img/icons/Chat.svg" alt="">
-					<img data-add class="close" src="img/icons/Close_LG.svg" alt="">
-			
-				</div>
+			<div class="popup__btn">
+				<img src="img/icons/Chat.svg" alt="">
 			</div>
 
 			<section class="page__products products">
@@ -141,13 +131,7 @@
 									<div class="item-product__price">98 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -167,13 +151,7 @@
 									<div class="item-product__price">94 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -193,13 +171,7 @@
 									<div class="item-product__price">99 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -219,13 +191,7 @@
 									<div class="item-product__price">82 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -245,13 +211,7 @@
 									<div class="item-product__price">89 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -271,13 +231,7 @@
 									<div class="item-product__price">54 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -297,13 +251,7 @@
 									<div class="item-product__price">45 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -323,13 +271,7 @@
 									<div class="item-product__price">43 990</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -349,13 +291,7 @@
 									<div class="item-product__price">37 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -375,13 +311,7 @@
 									<div class="item-product__price">79 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -401,13 +331,7 @@
 									<div class="item-product__price">68 900</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -427,13 +351,7 @@
 									<div class="item-product__price">89 800</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -453,13 +371,7 @@
 									<div class="item-product__price">84 990</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -479,13 +391,7 @@
 									<div class="item-product__price">65 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -505,13 +411,7 @@
 									<div class="item-product__price">52 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -531,13 +431,7 @@
 									<div class="item-product__price">78 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -557,13 +451,7 @@
 									<div class="item-product__price">66 200</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 						<article class="products__item item-product">
@@ -583,13 +471,7 @@
 									<div class="item-product__price">95 500</div>
 
 								</div>
-								<div class="item-product__actions actions-product">
-									<div class="actions-product__body">
 
-										<a href="" class="actions-product__link _icon-share">Подробнее</a>
-										<a href="" class="actions-product__link _icon-favorite">В корзину</a>
-									</div>
-								</div>
 							</div>
 						</article>
 
@@ -628,7 +510,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030141505"></script>
+	<script src="js/app.min.js?_v=20221030162509"></script>
 </body>
 
 </html>
